# libIMEI

./: CMakeLists.txt  LICENSE  README.md  libIMEI.c  libIMEI.cpp  libIMEI.h  libIMEI.hpp
Examples/: IMEIGenerator.cpp  imei_generate.c  imei_verify.c
